base/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    application: keycloak
    app.kubernetes.io/part-of: keycloak
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    deploymentConfig: keycloak
