base/keycloak/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak
  labels:
    application: keycloak
    app.kubernetes.io/part-of: keycloak
spec:
  tls: 
    termination: edge
  to:
    name: keycloak
